# desafio-backend

./: .env  .env.docker  .env.docker.example  .env.example  .gitignore  README.md  main.py  makefile  pyproject.toml
.github/workflows/: action.yml
.infra/docker/: docker-compose.yaml  docker-compose.yml  dockerfile.backend
.infra/migracao/: alembic.ini
.infra/migracao/alembic/: env.py
.infra/migracao/alembic/versions/: 353d82eeb417_add_dados_default.py  47784dc9585a_adicionar_tabela_tarefa.py  54036014b612_add_tabela_carteira_e_transferencia.py  a077063db3fb_add_usuario.py
contexto/calculo_de_valores/dominio/comandos/: carteira.py  transferencia_de_valores.py
contexto/calculo_de_valores/dominio/entidades/: carteira.py  transferencia_de_valores.py
contexto/calculo_de_valores/erros/: carteira.py  transferencia_de_valores.py
contexto/calculo_de_valores/pontos_de_entrada/: carteira.py  transferencia_de_valores.py
contexto/tarefa/erros/: gerencia_de_tarefa.py
contexto/tarefa/pontos_de_entrada/: gerencia_de_tarefa.py
contexto/usuario/erros/: conta_de_usuario.py
contexto/usuario/pontos_de_entrada/: conta_de_usuario.py
libs/database/: carregar_orm.py  config.py
libs/dominio/: barramento.py  comando.py  entidade.py  evento.py  objeto_de_valor.py  repositorio.py  unidade_de_trabalho.py
libs/fastapi/: crypt.py  dto.py  jwt.py
libs/tipos/: paginacao.py  retorno.py  uuid.py
libs/variaveis/: gerenciador_de_env.py
servidor/: config.py
test/: conftest.py
test/contexto/mocks/: repo.py
test/contexto/spy/: uow.py
(+36 files in other folders)
