[tool.poetry]
name = "gerenciador-de-tarefas"
version = "0.1.0"
description = ""
authors = ["Bruno Estrela <brunosiqest2@gmail.com>"]
readme = "README.md"


# Separando as dependências de desenvolvimento das dependências de produção
[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
pytest = "^8.2.1"
faker = "^25.2.0"
pydantic-settings = "^2.2.1"
validate-docbr = "^1.10.0"
httpx = "^0.27.0"
freezegun = "^1.5.1"
pytest-cov = "^5.0.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
